# KdTreeOnGPU

./: CMakeLists.txt  README.md  main.cpp
cmake/: add-libraries-linux.cmake  check-compiler.cmake  target-link-libraries-linux.cmake
include/: base.h  camera.h  kdtree.h  kdtree_object.h  kdtree_shader.h  light.h  object.h  project_constants.h.in  renderer.h  shader.h  text.h
include/cuda/: kdtree.cuh  kdtree_cuda.h
shaders/: point_shader.frag  point_shader.vert  scene_shader.frag  scene_shader.vert  text.frag  text.vert
shaders/kdtree/: copy_coordinates.comp  copy_encoded_found_points.comp  copy_found_points.comp  copy_reference.comp  find_nearest_neighbors.comp  generate_sample_ranks.comp  initialize.comp  initialize_knn.comp  initialize_reference.comp  merge_ranks_and_indices.comp  merge_references.comp  partition.comp  partition_final.comp  remove_duplicates.comp  remove_gaps.comp  remove_partition_gaps.comp  search.comp  small_partition.comp  sort_by_block.comp  sort_last_block.comp  sum_node_num.comp  verify.comp
shaders/shadow/: light_view_depth_generator.vert  scene_shader.frag  scene_shader.vert
source/: camera.cpp  kdtree.cpp  kdtree_object.cpp  kdtree_shader.cpp  light.cpp  object.cpp  renderer.cpp  shader.cpp  text.cpp
source/cuda/: kdtree.cu  kdtree_cuda.cpp
